# duelstats

./: README.md  makefile  pyproject.toml  statistics.csv  win_loss_calc.py
data/: seedecks.csv
duelstats/: main.py
duelstats/core/: calculations.py  duelstats.py  plots.py
