[tool.poetry]
name = "win-loss-calc"
version = "0.1.0"
description = ""
authors = ["Baron"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"
requests = "^2.28.1"
matplotlib = "^3.6.2"


[tool.poetry.group.lint.dependencies]
isort = "^5.10.1"
black = "^22.10.0"
flake8 = "^6.0.0"
mypy = "^0.991"

[tool.isort]
profile = "black"

[tool.mypy]
# 3rd party import
ignore_missing_imports = true
# dynamic typing
disallow_any_unimported = true
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = true
disallow_any_generics = false
disallow_subclassing_any = true
# platform
python_version = "3.10"
# untyped
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
# None and Optional
no_implicit_optional = true
# Warnings
warn_return_any = false
warn_unreachable = true
# Misc
pretty = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E501"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
